# python-latex-repo

./: README.md  pyproject.toml
.devcontainer/: Dockerfile
application/: document.aux  document.tex  document.toc  programmatic_report.aux  programmatic_report.tex  programmatic_report.toc  python_to_latex_code.ipynb  test_python_code.ipynb  total_prompt.txt
application/algo_docs/: calculate_hohmann_transfer_doc.tex  calculate_hohmann_transfer_example.tex  gravitational_assist_doc.tex  gravitational_assist_example.tex  init.tex  optimize_trajectory_doc.tex  optimize_trajectory_example.tex  predator_prey_system_doc.tex  predator_prey_system_example.tex  title_page.tex
application/examples/: calculate_hohmann_transfer_example.py  gravitational_assist_example.py  optimize_trajectory_example.py  predator_prey_system_example.py
application/python_code/: calculate_hohmann_transfer.py  gravitational_assist.py  optimize_trajectory.py  predator_prey_system.py
